--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,20 @@
 form {
+  text-align: center;
+  margin: 2rem;
+
   & input[type='text'] {
+    font-size: 2em;
+    border-radius: 5px;
+    border: 1px lightgray solid;
+    padding: .2em;
+    &:focus {
+      outline: none;
+      border-color: green;
+    }
   }
-  & input[type='text'] {
+  input[type='submit'] {
+    -webkit-appearance: button;
+    font-size: 2em;
   }
 }
 
@@ -27,6 +40,12 @@ form {
     justify-content: center;
     flex-direction: column;
     margin: 0 auto;
+    position: relative;
+    &:hover {
+      & .history {
+        display: flex;
+      }
+    }
     & .name {
       color: white;
       display: block;
@@ -42,11 +61,33 @@ form {
     }
     & .history {
       display: none;
+      width: 100%;
+      height: 100%;
+      overflow: scroll;
+      position: absolute;
+      top: 0;
+      background: rgba(255, 255, 255, 0.8);
+      padding: 1em 0;
+      flex-direction: column;
+      align-items: center;
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
       & .inc {
         color: red;
+        background: rgba(255, 0, 0, 0.2);
       }
       & .dec {
         color: green;
+        background: rgba(0, 255, 0, 0.1);
+      }
+      & .inc,
+      .dec {
+        text-align: center;
+        margin: 0.2em;
+        padding: 0.1em 0.2em;
+        border-radius: 2px;
       }
     }
   }
