--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@ form {
     border-radius: 5px;
     border: 1px lightgray solid;
     padding: .2em;
+    width: 80%;
     &:focus {
       outline: none;
       border-color: green;
