--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
   vertical-align: baseline;
   line-height: 1;
   font-size: 10px;
-  // outline: none;
+  outline: none;
 }
 
 body {
@@ -23,6 +23,7 @@ ul {
 
 .text-input {
   border: 1px solid black;
+
   &:focus {
     border: none;
     outline: 2px solid green;
