--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -6,25 +8,127 @@
   vertical-align: baseline;
   line-height: 1;
   font-size: 10px;
-  // outline: none;
+  outline: none;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Roboto',
+    'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+h1 {
+  font-size: 4em;
+  text-align: center;
+  margin-top: 3rem;
 }
 
 ul {
   list-style: none;
 }
 
+form {
+  width: 100%;
+  text-align: center;
+  padding: 3em 0;
+  background: linear-gradient(rgba(255, 255, 255, 0) 7.4rem, white);
+}
+
 .text-input {
-  border: 1px solid black;
+  border: 2px solid lightgray;
+  width: 60%;
+  min-width: 25rem;
+  font-size: 3em;
+  border-radius: 1em;
+  padding: 0.1em 0.5em;
 
   &:focus {
-    outline: 1px solid green;
+    border: 2px solid #3358ff;
+  }
+}
+
+.people {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+  grid-gap: 2rem;
+  align-content: flex-start;
+  flex-grow: 1;
+  overflow: scroll;
+  // padding: 4em;
+  width: 80%;
+  min-width: 25rem;
+  margin: 0 auto;
+}
+
+.person {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: lightgray;
+  width: 25rem;
+  height: 25rem;
+  border-radius: 50%;
+  position: relative;
+  text-align: center;
+  margin: 0 auto;
+  // padding: 5rem;
+  // overflow: hidden;
+
+  &:hover {
+    & .records {
+      display: flex;
+    }
+  }
+
+  & .name {
+    font-size: 5em;
+    text-transform: capitalize;
+  }
+
+  & .amount {
+    font-size: 3em;
+  }
+
+  & .records {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 50%;
+    position: absolute;
+    text-align: center;
+    overflow: scroll;
+    background: rgba(255, 255, 255, 0.6);
+    padding: 1em 0;
+
+    & .inc,
+    & .dec {
+      font-size: 1.6rem;
+      padding: 0.4rem;
+      margin: 0.5rem;
+      border-radius: 0.5rem;
+    }
+
+    & .inc {
+      color: red;
+      background-color: rgba(255, 0, 0, 0.2);
+    }
+
+    & .dec {
+      color: green;
+      background-color: rgba(0, 255, 0, 0.2);
+    }
   }
 }
