--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   border: 0;
   vertical-align: baseline;
-  line-height: 1;
+  line-height: 1em;
   font-size: 10px;
   outline: none;
 }
@@ -139,7 +139,7 @@ form {
   }
 
   & .records {
-    display: none;
+    // display: none;
     flex-direction: column;
     align-items: center;
     width: 100%;
@@ -154,11 +154,20 @@ form {
     padding: 1em 0;
 
     & .inc,
-    & .dec {
+    & .dec,
+    & button {
       font-size: 1.6rem;
-      padding: 0.4rem;
+      padding: 0 0.4rem;
       margin: 0.5rem;
       border-radius: 0.5rem;
+    }
+
+    & button {
+      color: red;
+      background-color: rgba(255, 0, 0, 0.2);
+      margin: 0;
+      height: 2rem;
+      cursor: pointer;
     }
 
     & .inc {
