--- a/src/index.scss
+++ b/src/index.scss
@@ -139,8 +139,8 @@ form {
   }
 
   & .records {
-    // display: none;
-    flex-direction: column;
+    display: none;
+    flex-direction: column-reverse;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -152,6 +152,10 @@ form {
     overflow: scroll;
     background: rgba(255, 255, 255, 0.6);
     padding: 1em 0;
+
+    & .record {
+      margin: 0.5rem 0;
+    }
 
     & .inc,
     & .dec,
@@ -170,12 +174,12 @@ form {
       cursor: pointer;
     }
 
-    & .inc {
+    & .dec {
       color: red;
       background-color: rgba(255, 0, 0, 0.2);
     }
 
-    & .dec {
+    & .inc {
       color: green;
       background-color: rgba(0, 255, 0, 0.2);
     }
