insert begining history

--- a/src/index.scss
+++ b/src/index.scss
@@ -140,7 +140,7 @@ form {
 
   & .records {
     display: none;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
     width: 100%;
     height: 100%;
